xine (0.9.5) unstable; urgency=low

  * input_http bugfixes, proxy, auth and proxy-auth support
  * snapshots of YUY2 images should work now
	
 -- Guenter Bartsch <guenter@users.sourceforge.net> Tue Nov  6 11:06:53 CET 2001

xine (0.9.4) unstable; urgency=low

  * new SyncFB video out plugin (see README.syncfb)
  * catch SIGSEGV during libdivxdecore version probing. see README.divx4.
  * audio_force_rate .xinerc option
	
 -- Guenter Bartsch <guenter@users.sourceforge.net> Sun Nov  4 23:43:55 CET 2001
	
xine (0.9.3) unstable; urgency=low

  * XShm gamma adjusting (brightness)
  * bugfix: lot skipped frames and low cpu
  * bugfix: dolby 2.0 audio was not correctly played back (mono)
  * option for constant downmixing to dolby 2.0 added (see README.xinerc)
  * reworked spu/menu decoder
  * new deinterlace method using Xv scaling for slower systems
  * mmx/mmxext/sse optimized memcpy functions
  * oss softsync fixes
  * EXPERIMENTAL dxr3enc video driver for displaying non-mpeg streams on dxr3
    (read xine-ui/doc/README.dxr3 for details on compilation and usage)
  * version checking of external libdivxdecore.so in divx4 decoder plugin
  * default priority of divx4 decoder (4) lower than ffmpeg (5)
  * removed divx4 decoder warning and code cleanup; updated README.divx4
  * dxr3 option for 'zoom' mode (see README.dxr3)
  * dxr3 still-menu/audio sync fixes / menu buttons now auto-display
  * dxr3 now keeps BCS values in .xinerc / Aspect ratio autodetection
  
xine (0.9.2) unstable; urgency=low

  * bugfixes
  * ogg/vorbis support
  * improved softsync (esd, oss) support
  * ASF support
  * non-gcc compiler support
  * improved spu/menu support
  * fast, specialized scaling functions
  * documentation cleanup
  * audio volume slider

 -- Guenter Bartsch <guenter@users.sourceforge.net> Sun Oct 14 20:13:20 CEST 2001

xine (0.9.1) unstable; urgency=low

  * support for subtitle names
  * new software deinterlacer (try --deinterlace; caution: CPU intensive!)